# easy-gpu

./: Cargo.toml  README.md
src/: frame.rs  lib.rs  renderer.rs  wgpu.rs
src/assets/: buffer.rs  mod.rs  texture.rs  vertex_layout.rs
src/assets/compute/: bind_group.rs  mod.rs  pipeline.rs  task.rs
src/assets/render/: material.rs  mesh.rs  mod.rs  pipeline.rs  task.rs
src/assets_manager/: arena.rs  asset_manager.rs  asset_registry.rs  handle.rs  mod.rs
